[package]
name = "rust-roguelike"
version = "0.1.0"
authors = ["Maksim Kudrautsau <maksim.kudrautsau@itechart-group.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.1"
specs = { version = "0.16.1", features = ["specs-derive"] }
